<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memo</string>
    <string name="menu">Menu</string>
    <string name="menu_add">Add</string>
    <string name="menu_editor_save">Save</string>
    <string name="menu_editor_delete">Delete</string>
    <string name="new_title">New note</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_revert">Revert</string>
    <string name="menu_bg">Background</string>
    <string name="error_msg">Error loading note.</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_redo">Redo</string>
    <string name="share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_password">Password</string>
    <string name="menu_text_size">Text Size</string>
    <string name="thumb_exit">exit</string>
    <string name="thumb_back">back</string>
    <string name="password_hint1">password</string>
    <string name="password_hint2">password confirm</string>
    <string name="password_empty">Password Empty</string>
    <string name="password_diff">Input not consistent!</string>
    <string name="password_clear">Clear password</string>
    <string name="password_inform1">Up to 8,only allows digital</string>
    <string name="password_inform2">Please ensure that the two input consistent</string>
    <string name="hint_email">No avalible email App.</string>
    <string name="hint_weibo">No avalible Sina Weibo app.</string>
    <string name="output_txt">Ouput as TXT</string>
    <string name="hint_backup_in">Output In </string>
    <string name="hint_backup_failed">Output failed</string>
    <string name="hint_empty_contents">Empty contents.</string>
    <string name="hint_delete">Delete</string>
    <string name="feedback">Feed back</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="bg_color">
        <item >Green</item>
        <item >Red</item>
        <item >Blue</item>
        <item >White</item>
        <item >Yellow</item>
    </string-array>
    <string-array name="share_type">
        <item >SMS</item>
        <item >Email</item>
        <item >Weibo</item>
    </string-array>
    <string-array name="backup_list">
        <item>To SDCard</item>
    </string-array>
    
    <string-array name="drawer_list">
        <item>background</item>
        <item>output path</item>
        <item>feedback</item>
        <item>version</item>
    </string-array>

    <string name="elv_undo">Undo</string>
    <string name="elv_undo_all">Undo All</string>
    <string name="elv_item_deleted">Item deleted</string>
    <string name="elv_n_items_deleted">%1$s items deleted</string>
</resources>