<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" 
    android:background="@drawable/background_0">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"        
        android:background="@drawable/thumb"
        android:padding="0dp"
        android:orientation="vertical" >
		<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >
            <ImageView
		        android:id="@+id/password_heaer_image"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginTop="20dp"
		        android:src="@drawable/password_key" >
    		</ImageView>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <EditText
                android:id="@+id/password_input_1"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_centerInParent="true"
                android:background="@drawable/search_bkg"
                android:ems="10"
                android:maxLength="8"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:gravity="center"
                android:hint="@string/password_hint1"
                android:paddingBottom="4dp"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:paddingTop="4dp"
                android:singleLine="true" >
            </EditText>
        </RelativeLayout>

         <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/share_line_dash" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <EditText
                android:id="@+id/password_input_2"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_centerInParent="true"
                android:background="@drawable/search_bkg"
                android:ems="10"
                android:inputType="numberPassword"
                android:maxLength="8"
                android:maxLines="1"
                android:gravity="center"
                android:hint="@string/password_hint2"
                android:paddingBottom="4dp"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:paddingTop="4dp"
                android:singleLine="true" >
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/roundCornerTableBorder" />

        <RelativeLayout
            android:id="@+id/password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sl_bg_round_corner_btn" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@android:string/ok"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/roundCornerTableBorder" />

        <RelativeLayout
            android:id="@+id/password_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@drawable/sl_bg_round_corner_btn" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/password_clear"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/roundCornerTableBorder" />
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:layout_marginTop="5dp"
		        android:text="@string/password_inform1"
		        android:textColor="@color/black" />

		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:text="@string/password_inform2"
		        android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    

</LinearLayout>